--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "RunAPI",
+            "request": "launch",
+            "mainClass": "RunAPI",
+            "projectName": "Java_watch_better_project_9a1e7553"
+        },
+        {
+            "type": "java",
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "br.com.watchbetter.RunAPI",
